--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "www.saydam.com",
+    "Issuer": "www.saydam.com",
+    "AccessTokenExpiration": 60,
+    "SecurityKey": "mysecretkeymysecretkey0022"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
