--- a/Business/Business.csproj
+++ b/Business/Business.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Castle.Core" Version="4.4.1" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="FluentValidation" Version="10.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
 </Project>
